--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ kotlin.native.enableDependencyPropagation=false
 android.useAndroidX=true
 kotlin.version=1.7.20
 agp.version=7.3.0
+realmVersion = 1.5.0
 compose.version=1.2.1
 voyagerVersion= 1.0.0-rc03
 kodeinVersion= 7.14.0
